@@ -1,3 +1,9 @@
+2009-06-29  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>
+
+	* We now use only one table (packages) and one model (Repo).
+	* Added package information page links on the result pages.
+	* Added Pardus 2009 support.
+
 2008-12-10  Ahmet Emre ALADAĞ  <aladagemre@users.sourceforge.net>
 
 	* Cleaned up SQL Generator script.
